<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.roncoo</groupId>
    <artifactId>roncoo-education</artifactId>
    <version>25.0.0-RELEASE</version>
    <packaging>pom</packaging>

    <name>roncoo-education</name>
    <description>领课教育-分布式在线教育开源系统</description>
    <url>http://www.roncoo.net</url>

    <organization>
        <name>LingKe, Co., Ltd.</name>
        <url>http://www.roncoo.net</url>
    </organization>

    <developers>
        <developer>
            <name>fengyw</name>
            <email>fengyw@roncoo.com</email>
            <organization>LingKe, Co., Ltd.</organization>
            <organizationUrl>http://www.roncoo.net</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
        <developer>
            <name>wuy</name>
            <organization>LingKe, Co., Ltd.</organization>
            <organizationUrl>http://www.roncoo.net</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
        <developer>
            <name>liaohr</name>
            <email>liaohr@roncoo.com</email>
            <organization>LingKe, Co., Ltd.</organization>
            <organizationUrl>http://www.roncoo.net</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
        <developer>
            <name>keyh</name>
            <email>keyh@roncoo.com</email>
            <organization>LingKe, Co., Ltd.</organization>
            <organizationUrl>http://www.roncoo.net</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>3.2.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- spring cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2023.0.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- spring cloud alibaba -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>2023.0.1.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- knife4j -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
                <version>4.5.0</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>4.5.0</version>
            </dependency>

            <!-- com.roncoo -->
            <dependency>
                <groupId>com.roncoo</groupId>
                <artifactId>roncoo-education-feign-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.roncoo</groupId>
                <artifactId>roncoo-education-feign-user</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.roncoo</groupId>
                <artifactId>roncoo-education-feign-course</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.roncoo</groupId>
                <artifactId>roncoo-education-common-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.roncoo</groupId>
                <artifactId>roncoo-education-common-service</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- spring boot -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.2.4</version>
                    <configuration>
                        <executable>true</executable>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>repackage</goal>
                                <goal>build-info</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- compiler -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <skip>true</skip>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <!-- 基础工程 -->
        <module>roncoo-education-common</module>
        <!-- 接口模块 -->
        <module>roncoo-education-feign</module>
        <!-- 网关模块 -->
        <module>roncoo-education-gateway</module>
        <!-- 服务模块 -->
        <module>roncoo-education-service</module>
    </modules>
</project>
